tests/regression/pr63/pb.smt2
(set-logic QF_LIA)
(assert (let ((x 0) (y (+ x 1))) (= x y)))
